# bergipy

./: README.md  setup.cfg
src/bergipy/: IMX219Tools.py  IMX686Tools.py  ImageTools.py  JsonTools.py  ListTools.py  MathTools.py  OperationalTools.py  OphanimTools.py  PlottingTools.py  ThreadingTools.py  __init__.py  hilbertizer.py
