[metadata]
name = bergipy
version = 0.0.1
author = Michael Berghold
author_email = michael.berghold@tum.de
description = Bergi's personal python library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BergiBerghold/bergipy.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    opencv-python
    scipy
    matplotlib==3.5.0

[options.packages.find]
where = src
